Update DelaunayTools.java
Some code cleanup